# wekan-cli

./: .dockerignore  .editorconfig  .gitignore  .pre-commit-config.yaml  AUTHORS  BACKLOG.md  Cargo.toml  DATAFLOW.md  Dockerfile  Dockerfile.e2e  Dockerfile.e2e-retest  Makefile  README.md  collect-coverage.sh  docker-compose.yml  manager.sh  rust-toolchain.toml
.cargo/: config
.github/workflows/: all_in_one.yml  complete.yml
crates/wekan-cli/: .gitignore  Cargo.toml
crates/wekan-cli-derive/: Cargo.toml
crates/wekan-cli-derive/src/: lib.rs
crates/wekan-cli/e2e/: docker-compose.yml  e2e.sh  entrypoint.sh  stderr_pre_login  stdout_board  stdout_card  stdout_config  stdout_context  stdout_delete  stdout_describe  stdout_list  stdout_login
crates/wekan-cli/src/: board.rs  checklist-item.rs  checklist.rs  command.rs  display.rs  error.rs  lib.rs  list.rs  resolver.rs  result.rs  runner.rs  store.rs  subcommand.rs  tests.rs  workspace.rs
crates/wekan-cli/src/board/: argument.rs  runner.rs
crates/wekan-cli/src/card/: argument.rs  runner.rs
crates/wekan-cli/src/config/: argument.rs  context.rs  credentials.rs  mod.rs  runner.rs
crates/wekan-cli/src/error/: kind.rs
crates/wekan-cli/src/list/: argument.rs  mod.rs  runner.rs
crates/wekan-cli/src/persistence/: store.rs
crates/wekan-cli/src/result/: kind.rs
crates/wekan-cli/src/util/: mod.rs
crates/wekan-common/: .gitignore  Cargo.toml
crates/wekan-common/src/: lib.rs
crates/wekan-common/src/artifact/: board.rs  card.rs  checklist.rs  common.rs  item.rs  list.rs  mod.rs  swimlane.rs  tests.rs
crates/wekan-common/src/error/: kind.rs
crates/wekan-common/src/http/: artifact.rs  board.rs  card.rs  common.rs  mod.rs
crates/wekan-common/src/validation/: authentication.rs  constraint.rs  mod.rs  user.rs
crates/wekan-core/: Cargo.toml
crates/wekan-core-derive/: .gitignore  Cargo.toml
crates/wekan-core-derive/src/: lib.rs
crates/wekan-core/src/: client.rs  config.rs  lib.rs  log.rs
crates/wekan-core/src/error/: kind.rs
crates/wekan-core/src/http/: artifact.rs  authentication.rs  client.rs  mod.rs  operation.rs  preflight_request.rs  util.rs
crates/wekan-core/src/persistence/: config.rs  mod.rs  store.rs
crates/wekan-core/tests/: #http.rs#  #test-data.json#  card.yml  client.rs  config.rs  http.rs  test-data.json
doc/: BACKLOG.md  DEVELOPMENT.md  E2E.md
docs/: BACKLOG.md  COVERAGE.md  DATAFLOW.md  DEVELOPMENT.md  E2E.md
e2e/: e2e.sh  entrypoint.sh  stderr_config  stderr_pre_login  stdout_board  stdout_card  stdout_config  stdout_context  stdout_delete  stdout_describe  stdout_list  stdout_login
emacs/: wekan.el
