[package]
name = "wekan-cli"
version = "0.1.1"
edition = "2021"
description = "A Wekan CLI to view, edit and remote artifacts from a WEKAN board"
repository = "https://github.com/ConfusedOnCOFFEE/wekan-cli"
categories = ["command-line-interface", "cli", "wekan", "kanban"]
keywords = [
  "wekan",
  "cli",
  "kanban",
]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.61.0"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]

[[bin]]
name = "wekan-cli"
path = "src/bin/wekan-cli.rs"

[features]
store = [ "wekan-core/store"]
integration = [ "store"]

[profile.dev]
opt-level = 0
debug = true
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[profile.test]
opt-level = 1
codegen-units = 1

[dependencies]
reqwest = { version = "0.11.10", features = ["json", "multipart" ] }
tokio = { version = "1.18.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"]}
serde_json = { version = "1.0" }
serde_yaml = { version = "0.8.21" }
async-trait = { version = "0.1.7" }
clap = { version = "3.0.14", features = ["derive", "env", "yaml"] }
clap-verbosity-flag = "1.0.0"
wekan-common = { path = "../wekan-common" }
wekan-core = { path = "../wekan-core" }
wekan-core-derive = { path = "../wekan-core-derive"}
log = "0.4.0"
env_logger = "0.8.4"
rpassword = "6.0.1"
regex = "1.5.6"
chrono = "0.4"

[dev-dependencies]
wekan-common = { path = "../wekan-common", features = ["test"] }
