[package]
name = "wekan-common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["lib"]
bench = false

[profile.release]
opt-level = 3
debug = false
split-debuginfo = '...'  # Platform-specific.
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
incremental = false
codegen-units = 16
rpath = false

[dependencies]
serde = { version = "1.0", features = ["derive"]}
async-trait = { version = "0.1.7" }
reqwest = { version = "0.11.10", features = ["json", "multipart" ] }
serde_yaml = { version = "0.8.21" }
# [dependencies.yaml-rust]
# git = "https://github.com/chyh1990/yaml-rust.git"
