[package]
name = "wekan-common"
version = "0.1.0"
edition = "2021"
description = "A Wekan common for all the structs from the API"
repository = "https://github.com/ConfusedOnCOFFEE/wekan-cli"
keywords = [
  "wekan",
  "api_v6.11",
  "kanban",
  "wekan-cli",
  "wekan-core"
]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.60.0"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]
[features]
test = []

[lib]
crate-type = ["lib"]
bench = false

[dependencies]
serde = { version = "1.0", features = ["derive"]}
async-trait = { version = "0.1.7" }
reqwest = { version = "0.11.10", features = ["json", "multipart" ] }
serde_yaml = { version = "0.8.21" }
