[package]
name = "wekan-core-derive"
version = "0.1.0"
edition = "2021"
description = "The Wekan core derives"
repository = "https://github.com/ConfusedOnCOFFEE/wekan-cli"
categories = ["client", "wekan", "kanban", "core", "common", "derive"]
keywords = [
  "wekan",
  "derive",
  "wekan-cli",
  "wekan-common",
  "wekan-core"
]
license = "MIT OR Apache-2.0"
readme = "README.md"
rust-version = "1.60.0"
include = [
  "src/**/*",
  "Cargo.toml",
  "LICENSE*",
  "README.md",
]
[lib]
proc-macro = true

[dependencies]
proc-macro2= { version = "1.0.39" }
quote = "1.0"
syn = { version = "1.0" }
